unpackaged/main/default/objects/ETSALES_Account_Sites__c/ETSALES_Account_Sites__c.object-meta.xml
<CustomObject>
    <label>Account Site</label>
    <nameField>
        <displayFormat>Site-{0000}</displayFormat>
        <label>Account Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>