unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/Customer_TRN__c.field-meta.xml
<CustomField>
    <fullName>Customer_TRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer TRN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>