unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSALES_Account__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Sites</relationshipLabel>
    <relationshipName>Operating_Unit_Address</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>