unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSALES_Address__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ETSALES_Address__c.ETSALES_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.ETSALES_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ETSALES_Address__c</referenceTo>
    <relationshipLabel>Account Sites</relationshipLabel>
    <relationshipName>Operating_Unit_Address</relationshipName>
    <type>Lookup</type>
</CustomField>