unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSALES_Business_Purpose__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Business_Purpose__c</fullName>
    <label>Business Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BILL_TO</fullName>
                <default>true</default>
                <label>Bill To</label>
            </value>
            <value>
                <fullName>SHIP_TO</fullName>
                <label>Ship To</label>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>CREDIT_CONTACT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>