unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSALES_Cust_Acc_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Cust_Acc_Site_Id__c</fullName>
    <description>Oracle Site Use id - For integration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cust Acc Site Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>