unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSales_Cust_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ETSales_Cust_Account_ID__c</fullName>
    <description>using for Data Load</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Oracle ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>