unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSALES_Overall_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Overall_Credit_Limit__c</fullName>
    <label>Overall Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>