unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSALES_Site_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Site_Payment_Terms__c</fullName>
    <description>Changed the type from text to drop down, as per Data Upload</description>
    <label>Site Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>15 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
            <value>
                <fullName>180 Days</fullName>
            </value>
            <value>
                <fullName>360 Days</fullName>
            </value>
            <value>
                <fullName>Term for chargeback or debit memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>