unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSALES_Site_Profile_Class__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Site_Profile_Class__c</fullName>
    <label>Site Profile Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>DEFAULT</fullName>
            </value>
            <value>
                <fullName>Ministries</fullName>
            </value>
            <value>
                <fullName>Semi Government</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>