unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/ETSALES_Site_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Site_Profile_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Profile Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>