unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_ID__c</fullName>
    <formula>ETSALES_Address__r.ETSALES_Location_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location ID</label>
    <type>Text</type>
</CustomField>