unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/Operation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Operation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>