unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/Oracle_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Account_ID__c</fullName>
    <formula>ETSALES_Account__r.ETSALES_Customer_Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle Account ID</label>
    <type>Text</type>
</CustomField>