unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_ID__c</fullName>
    <formula>Text( ETSALES_Operating_unit__r.ETSALES_Organization_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization ID</label>
    <type>Text</type>
</CustomField>