unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/Salik_Service_Charges__c.field-meta.xml
<CustomField>
    <fullName>Salik_Service_Charges__c</fullName>
    <label>Salik Service Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>