unpackaged/main/default/objects/ETSALES_Account_Sites__c/fields/Traffic_Fine__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Fine__c</fullName>
    <label>Traffic Fine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>