unpackaged/main/default/objects/ETSALES_Account_Sites__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETSALES_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ETSales_Cust_Account_ID__c</columns>
    <columns>Customer_TRN__c</columns>
    <columns>ETSALES_Party_Site_Id__c</columns>
    <columns>ETSALES_Party_Site_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>